--- a/jumoney-beta.html
+++ b/jumoney-beta.html
@@ -34,7 +34,7 @@
 	*/
 </style>
 <!-- JSZip 라이브러리 추가 -->
-<link rel="stylesheet" href="./css/default-beta.css?241104">
+<link rel="stylesheet" href="./css/default-beta.css?241107">
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
 <script type="text/javascript" src="./js/cache.js?v241101"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241104"></script>
@@ -119,7 +119,8 @@
 	</div>
 	<div id="right">
 		<h1>주머니 수배지</h1>
-		<label class="color-picker">테두리 색 변경 <input type="color" id="setBorderColor" value="#808080"/></label>
+		<span>이미지 저장기준으로 정렬되어 미리보기에서는 조금 틀어져 보일 수 있습니다.</span>
+		<p class="color-picker">테두리 색 변경 <input type="color" id="setBorderColor" value="#808080"/></p>
 		<div id="container" class="container">
 			<div class="info-section">
 				<div id="jumoney-info">
