--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241103"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241104"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241107"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -133,13 +133,14 @@
 			<br/>
 			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-11-04 18:30</li>
+				<li><label class="new_nt">new</label>2024-11-07 14:45</li>
 				<li>&nbsp;</li>
-				<li>모달창에서 세트별 서버 채널 표시가 추가됩니다.</li>
+				<li>아이폰 저장 기능이 막혔던 부분을 수정하였습니다.</li>
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-11-03 20:30</li>
+				<li>&nbsp;</li>
+				<li>모달창에서 세트별 서버 채널 표시가 추가됩니다.</li>
 				<li>&nbsp;</li>
 				<li>공용키 사용이 추가됩니다.</li>
 				<li>- 검색 버튼 우측 체크 박스를 선택하여 사용할 수 있으며, 키 입력 없이 사용하실 수 있습니다.</li>
@@ -284,7 +285,7 @@
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p>V241106-2302</p>
+		<p>V241107-1400</p>
 		<span>made by @Shuu__deal</span>
 	</footer>
 </body>
