--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241103"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241107"></script>
+<script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v241104"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
 <script type="text/javascript"  src="./js/izitoast/iziToast.js"></script>
-<link rel="stylesheet" href="./css/font.css?241104">
-<link rel="stylesheet" href="./css/default.css?v241106">
+<link rel="stylesheet" href="./css/font.css?241105">
+<link rel="stylesheet" href="./css/default.css?v241107">
 <link rel="stylesheet" href="./css/icon/iconStyle.css?v241101">
 <link rel="stylesheet" href="./js/sweetalert2/sweetalert2.css"></link>
 <script>
@@ -133,12 +134,21 @@
 			<br/>
 			
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2024-11-07 14:45</li>
+				<li><label class="new_nt">new</label>2024-11-08  01:10</li>
 				<li>&nbsp;</li>
-				<li>아이폰 저장 기능이 막혔던 부분을 수정하였습니다.</li>
+				<li>1. 주머니 베타 기능이 추가되었습니다</li>
+				<li>- 주머니 이미지 제작이 가능하며, 배포 이미지 제작이 가능합니다.</li>
+				<li>- 아이디 입력을 원치 않을 경우 스페이스(공백) 한번을 입력하세요.</li>
+				<li>- 해당 기능은 이미지 툴을 다루기 어려운 분들을 위한 기능입니다.</li>
+				<li>- 이미지 툴 다루는데 어려움이 없으신 분들은 <a href="https://x.com/Elatha_Marry_Me/status/1853811385647730803" target="_blank">WF 쭈냠냠이</a>님 틀을 사용해보세요!</li>
+				<li>&nbsp;</li>
+				<li>2. 캡쳐 또는 이미지 저장시 색 코드가 불바꿈 되던 현상이 수정되었습니다.</li>
+				<li>&nbsp;</li>
+				<li>3. 전서버 채널링 / 서버 채널링이 구분되어 표시됩니다. (채널링 정보 좌측 서버 표시)</li>
 			</ul>
 			
 			<ul style=" background: #fcf3f3;">
+				<li><label class="new_nt">new</label>2024-11-04 18:30</li>
 				<li>&nbsp;</li>
 				<li>모달창에서 세트별 서버 채널 표시가 추가됩니다.</li>
 				<li>&nbsp;</li>
@@ -285,7 +295,7 @@
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p>V241107-1400</p>
+		<p>V241106-2302</p>
 		<span>made by @Shuu__deal</span>
 	</footer>
 </body>
