--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v241209-03"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v2450303"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -453,7 +453,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250301-2-test</p>
+		<p style="font-size: 13px;">V250303-Dells</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
