--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <link rel="icon" href="./image/favicon.ico" type="image/x-icon">
 <title>주머니 순회</title>
 <script type="text/javascript" src="./js/cache.js?v241101"></script>
-<script type="text/javascript" src="./js/apiCode.js?b250313"></script>
-<script src="./js/erinTime.min.js?v2"></script>
+<script type="text/javascript" src="./js/apiCode.js?b250313-2"></script>
+<script src="./js/erinTime.min.js?v250313"></script>
 <script type="text/javascript" src="./js/decodeGivenColorQuery.min.js"></script>
 <script type="text/javascript" src="./js/a_001.min.js?241209"></script>
 <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@2.8.0/dist/dom-to-image-more.min.js"></script>
 <script	src="https://cdn.jsdelivr.net/npm/dom-to-image-font-patch@latest/dist/dom-to-image-font-patch.min.js"></script>
-<script type="text/javascript" src="./js/jumoney.min.js?v250313"></script>
+<script type="text/javascript" src="./js/jumoney.min.js?v250313-2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.all.min.js"></script>
 <link rel="stylesheet" href="./js/izitoast/iziToast.css"></link>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script> -->
@@ -325,19 +325,24 @@ display:none;
 		</div>
 	</div>
 	<div id="main">
-		<div id="loading">
-			<ul style="text-align: center; font-size: 15pt;">
-				<li>2025년 한 해는 좋은 일이 가득한 한 해 되시길 바랍니다</li>
-				<li>다들 새해 복 많이 받으세요</li>
-			</ul>
-			<br/>
+		<div id="loading">			
 			<ul>
-				<li>얼레벌레 공지입니다. 보기 좋게 만드는 건 기능구현 후에..</li>
+				<li>대충 만든 공지입니다.</li>
 			</ul>
 			<br/>
-			
+
 			<ul style=" background: #fcf3f3;">
-				<li><label class="new_nt">new</label>2025-03-01</li>
+				<li><label class="new_nt">new</label>2025-03-13</li>
+				<li>&nbsp;</li>
+				<li>- 에린 시간이 API에서 받은 리셋 시간과 동기화 작업이 진행됩니다.</li>
+				<li>- 동기화는 에린시간 하루에 한번씩 진행되며 주머니 리스트를 호출 한 경우만 해당됩니다.</li>
+				<li>&nbsp;</li>
+				<li>- 간혹 API 호출 응답은 성공적으로 받았으나 주머니 리스트가 존재하지 않아 빈 화면으로 표시되던 현상이 있었습니다.</li>
+				<li>- 해당 현상도 사용자가 알아볼 수 있도록 경고창이 나오도록 수정되었습니다.</li>
+			</ul>
+
+			<ul>
+				<li>2025-03-01</li>
 				<li>&nbsp;</li>
 				<li>- '필터링 보기', '필터링 숨기기' 를 통해 필터링 정보를 숨길 수 있습니다.</li>
 				<li>&nbsp;</li>
@@ -453,7 +458,7 @@ display:none;
 	
 	<footer>
 		<p>Data based on NEXON Open API</p>
-		<p style="font-size: 13px;">V250313</p>
+		<p style="font-size: 13px;">V250313-2</p>
 		<span>울프 주머니@Shuu__deal</span>
 	</footer>
 </body>
